--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,12 +23,13 @@
       <% end %>
     <% end %>
 
-    <!-- Timer only for students -->
+    <!-- Timer for students
     <% unless current_user.teacher? %>
       <div class="time-spent">
         <p>🕐<strong class="ms-2">Time practiced:</strong> <span id="timer" data-answer-target="timer">00:00:00</span></p>
       </div>
     <% end %>
+    -->
 
     <div class="question-box">
       <h2><%= @question.content %></h2>
