--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,32 +3,26 @@
     <li class="nav-item">
       <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'index' %>" href="<%= dashboard_path %>">Dashboard</a>
     </li>
+    
     <% if current_user.student? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'index' %>" href="<%= courses_path %>">My Courses</a>
       </li>
     <% end %>
-    <% if current_user.teacher? %>
+
+    <% if current_user.teacher? || current_user.admin? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'my_groups' %>" href="<%= dashboard_my_groups_path %>">Mijn Groepen</a>
       </li>
-    <% end %>
-    <% if current_user.teacher? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'groups' && action_name == 'new' %>" href="<%= new_group_path %>">Create Group</a>
       </li>
-    <% end %>
-    <% if current_user.teacher? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'my_courses' %>" href="<%= my_courses_courses_path %>">My Courses</a>
       </li>
-    <% end %>
-    <% if current_user.teacher? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'new' %>" href="<%= new_course_path %>">Create Course</a>
       </li>
-    <% end %>
-    <% if current_user.teacher? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'students' && action_name == 'index' %>" href="<%= students_path %>">Students List</a>
       </li>
