--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,15 +1,25 @@
 <div class="sidebar">
   <ul class="nav flex-column">
+    <!-- Dashboard Link -->
     <li class="nav-item">
       <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'index' %>" href="<%= dashboard_path %>">Dashboard</a>
     </li>
-    
+
+    <!-- Manage Users (Admin only) -->
+    <% if current_user.admin? %>
+      <li class="nav-item">
+        <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'manage_users' %>" href="<%= dashboard_manage_users_path %>">Manage Users</a>
+      </li>
+    <% end %>
+
+    <!-- My Courses (Student) -->
     <% if current_user.student? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'courses' && action_name == 'index' %>" href="<%= courses_path %>">My Courses</a>
       </li>
     <% end %>
 
+    <!-- Teachers and Admin Section -->
     <% if current_user.teacher? || current_user.admin? %>
       <li class="nav-item">
         <a class="nav-link <%= 'active' if controller_name == 'dashboards' && action_name == 'my_groups' %>" href="<%= dashboard_my_groups_path %>">Mijn Groepen</a>
